<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mphj.accountry.activity.ImportProductActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/hint_storage" />

        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/dropshadow_1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:id="@+id/recyclerView">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.333"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:background="#F44336"
                android:textColor="#fff"
                android:id="@+id/fromList"
                android:textSize="12dp"
                android:text="@string/add_product"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.334"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:background="#9C27B0"
                android:textColor="#fff"
                android:id="@+id/fromCamera"
                android:textSize="12dp"
                android:text="@string/from_camera"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.333"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:background="#3F51B5"
                android:textColor="#fff"
                android:id="@+id/fromFile"
                android:textSize="12dp"
                android:text="@string/from_excel"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:background="@color/colorGrayPrimary"
            android:textColor="#297cde"
            android:id="@+id/submit"
            android:text="@string/submit"/>
    </LinearLayout>
</ScrollView>
