<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="6dp"
    android:layoutDirection="rtl"
    tools:context="com.mphj.accountry.activity.DashboardActivity$PlaceholderFragment">
    <com.mphj.accountry.views.BorderedCard
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:borderColor="#F44336"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginRight="2dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/err_while_connecting"
                    android:textColor="#000"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/err_datas_may_wrong_because_network"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:minHeight="36dp"
                    android:layout_marginLeft="7dp"
                    android:background="#00000000"
                    android:textColor="@color/colorBlueAccent"
                    android:text="@string/turning_on_internet"/>
            </LinearLayout>
        </FrameLayout>
    </com.mphj.accountry.views.BorderedCard>
</RelativeLayout>
